# data-analytics-platform

./: .cfnlintrc.yml  .checkov.baseline  .checkov.ci.yml  .checkov.local.yml  .editorconfig  .eslintignore  .eslintrc.js  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CODEOWNERS  Dockerfile  Pyproject.toml  README.md  docker-compose.debug.yml  esbuild.config.ts  eslint.config.mjs  jest.config.js  jest.config.ts  jest.e2e.config.ts  jest.integration.config.ts  jest.setup.js  orphaned-resources-dev.md  orphened-resources-build.md  package-lock.json  package.json  pyproject.toml  quality-gate.manifest.json  read.md  requirements.txt  samconfig.toml  sonar-project.properties  template.yaml  test.json  test_journey.json  tsconfig.json  vitest.config.ts  (+1 more)
.github/: dependabot.yml
.husky/: post-checkout  post-commit  (+3 more)
athena-scripts/raw_stage_optimisation_solution/scripts/: AthenaReadWrite.py  DataPreprocessing.py  GlueTableQueryAndWrite.py  S3ReadWrite.py  core_preprocessing_functions.py  processor.py  raw_to_stage_process_glue_job.py  requirements.txt  setup.cfg
athena-scripts/raw_stage_optimisation_solution/scripts/etl/: Processor.py  main.py
athena-scripts/raw_stage_optimisation_solution/scripts/etl/clients/: S3ReadWrite.py
athena-scripts/raw_stage_optimisation_solution/scripts/etl/old/: core_preprocessing_functions.py
athena-scripts/raw_stage_optimisation_solution/scripts/etl/strategies/: BackfillStrategy.py  CustomStrategy.py  ScheduledStrategy.py  Strategy.py  ViewStrategy.py
athena-scripts/raw_stage_optimisation_solution/scripts/etl/util/: processing_utilities.py
athena-scripts/raw_stage_optimisation_solution/scripts/raw_to_stage_etl/: main.py  raw_to_stage_process_glue_job.py
athena-scripts/raw_stage_optimisation_solution/scripts/raw_to_stage_etl/clients/: AthenaReadWrite.py  DataPreprocessing.py  GlueTableQueryAndWrite.py  S3ReadWrite.py
athena-scripts/raw_stage_optimisation_solution/scripts/raw_to_stage_etl/logger/: logger.py
athena-scripts/raw_stage_optimisation_solution/scripts/raw_to_stage_etl/processor/: Processor.py
raw-to-stage/: GLUE_5_MIGRATION_SUMMARY.md  MANIFEST.in  MIGRATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
raw-to-stage/raw_to_stage_etl/: raw_to_stage_process_glue_job.py  raw_to_stage_process_glue_job_v5_pandas.py  raw_to_stage_process_pyspark.py
raw-to-stage/raw_to_stage_etl/clients/: athena_read_write.py  glue_table_query_and_write.py  s3_read_write.py
raw-to-stage/raw_to_stage_etl/logging/: __init__.py  logger.py
raw-to-stage/raw_to_stage_etl/processor/: __init__.py  processor.py
raw-to-stage/raw_to_stage_etl/strategies/: BackfillStrategy.py  CustomStrategy.py  ScheduledStrategy.py  ViewStrategy.py  backfill_strategy.py  custom_strategy.py  scheduled_strategy.py  strategy.py
raw-to-stage/raw_to_stage_etl/util/: DataPreprocessing.py  __init__.py  data_preprocessing.py  data_preprocessing_wrapper.py  database_utilities.py  error_handler.py  json_config_processing_utilities.py
raw-to-stage/raw_to_stage_etl/util/exceptions/: __init__.py  util_exceptions.py
raw-to-stage/tests/: scheduled_strategy_test.py  test-requirements.txt  test_raw_to_stage_process_glue_job.py
raw-to-stage/tests/clients/: test_athena_read_write.py  test_glue_table_query_and_write.py  test_s3_read_write.py
raw-to-stage/tests/processor/: test_processor.py  test_raw_to_stage_processor.py
raw-to-stage/tests/strategies/: test_extract.py  test_load.py  test_scheduled_strategy.py  test_strategy.py  test_transform.py
raw-to-stage/tests/test_code/config/: test_custom_etl_config.json  test_scheduled_etl_config.json  test_view_etl_config.json
raw-to-stage/tests/test_code/transformation_data/: auth_create_account.py  dcmaw_cri_vc_issued.py
raw-to-stage/tests/test_code/util/: helpers.py
raw-to-stage/tests/util/: test_data_preprocessing.py  test_data_preprocessing_wrapper.py  test_database_utilities.py  test_error_handler.py  test_json_config_processing_utilities.py
(+1244 files in other folders)
