[project]
name = "raw_to_stage_etl"
version = "0.1.0"
description = "Raw to Stage ETL modules for data analytics platform"
requires-python = ">=3.10"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 160

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
ignore_missing_imports = true

[tool.mypy]
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
