[project]
name = "raw-to-stage-etl-modules"
requires-python = ">=3.9, <3.11"


[build-system]
requires = [
    "poetry-core",
    "wheel"
]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
ignore_missing_imports = true

[tool.mypy]
disable_error_code = ["import-untyped"]
ignore_missing_imports = true

[tool.poetry]
name = "Data Analytics Platform ETL modules"
version = "0.1.0"
description = ""
authors = ["Adnan Hassan <adnan.hassan@digital.cabinet-office.gov.uk>"]
readme = ""
packages = [
    {include = "raw_to_stage_etl", from="raw-to-stage"}
]

[tool.poetry.dependencies]
python = "3.9.23"
boto3 = "1.34.82"
pandas = "1.5.3"
awswrangler = "3.7.2"
aws_lambda_powertools = "2.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-mock = "3.14.1"
pre-commit = "4.0.1"
awsglue-dev = "2021.12.30"
black = "24.10.0"
pyupgrade = "3.19.1"
isort = "5.13.2"
flake8 = "7.1.1"
flake8-bandit = "4.1.1"
flake8-bugbear = "24.12.12"
reindent = "3.5.1"
mypy = "1.14.1"
pydocstyle = "6.3.0"

[tool.pydocstyle]
inherit = false
match-dir = "^(?!tests).*"

[tool.poetry.build]
generate-setup-file = false
