[metadata]
name = raw_to_stage_etl_modules
version = 0.1.0
description = Raw to Stage ETL modules
long_description = README.md

[options]
packages = find:

[options.packages.find]
# Include all packages
include =
    raw_to_stage_etl
    raw_to_stage_etl.clients
    raw_to_stage_etl.processor
    raw_to_stage_etl.strategies
    raw_to_stage_etl.util
    raw_to_stage_etl.util.exceptions
    raw_to_stage_etl.logger
